docs: fix stat workflow

--- a/.github/workflows/daily-stats.yml
+++ b/.github/workflows/daily-stats.yml
@@ -50,7 +50,9 @@ jobs:
         run: node scripts/update-stats.js
 
       - name: show stats.json content
-        run: cat ./public-data/stats.json
+        run: |
+          cat ./public-data/stats.json
+          pwd
 
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
